   to reduce the load on the LDAP server.

 * Sudo is once again able to open the sudoers file when the group
   on sudoers doesn't match the expected value, so long as the file
   is not group writable.

 * Sudo now installs an init.d script to clear the time stamp
   directory at boot time on AIX and HP-UX systems.  These systems
   either lack /var/run or do not clear it on boot.

What's new in Sudo 1.8.9p5?

 * Fixed a compilation error on AIX when LDAP support is enabled.

 * Fixed parsing of the "umask" defaults setting in sudoers.  Bug #632.

 * Fixed a failed assertion when the "closefrom_override" defaults
   setting is enabled in sudoers and sudo's -C flag is used.  Bug #633.

What's new in Sudo 1.8.9p4?

 * Fixed a bug where sudo could consume large amounts of CPU while
   the command was running when I/O logging is not enabled.  Bug #631

 * Fixed a bug where sudo would exit with an error when the debug
   level is set to util@debug or all@debug and I/O logging is not
   enabled.  The command would continue runnning after sudo exited.

What's new in Sudo 1.8.9p3?

 * Fixed a bug introduced in sudo 1.8.9 that prevented the tty name
   from being resolved properly on Linux systems.  Bug #630.

What's new in Sudo 1.8.9p2?

 * Updated config.guess, config.sub and libtool to support the ppc64le
   architecture (IBM PowerPC Little Endian).

What's new in Sudo 1.8.9p1?

 * Fixed a problem with gcc 4.8's handling of bit fields that could
   lead to the noexec flag being enabled even when it was not
   explicitly set.

What's new in Sudo 1.8.9?

 * Reworked sudo's main event loop to use a simple event subsystem
   using poll(2) or select(2) as the back end.

 * It is now possible to statically compile the sudoers plugin into
   the sudo binary without disabling shared library support.  The
   sudo.conf file may still be used to configure other plugins.

 * Sudo can now be compiled again with a C preprocessor that does
   not support variadic macros.
